# rfnm_rs

./: Cargo.toml  rustfmt.toml
rfnm/: Cargo.toml
rfnm/examples/: rfnm_info_rs.rs  stream_to_nothing.rs
rfnm/src/: channel_settings.rs  device.rs  hwinfo.rs  lib.rs  stream.rs
rfnm_sys/: Cargo.toml  build.rs
rfnm_sys/librfnm_wrap/: librfnm_wrap.cpp  librfnm_wrap.hpp
rfnm_sys/src/: lib.rs
scripts/: update_librfnm.bash
