[workspace]
resolver = "2"
members = [
    "rfnm/",
    "rfnm_sys/"
]

[workspace.package]
version = "0.1.0"
authors = ["Malte Kießling"]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
cmake = "0.1"
cc = "1.1"
bindgen = "0.71.1"
rfnm_sys = {path = "rfnm_sys"}
thiserror = "2.0"
num-complex = "0.4"